Fix tray scrolling (#392)
* Calculate Tray max-height in JS

* Use padding instead of margin for top and bottom of menu

* Add scrollDirection prop to CollectionView to prevent unwanted horizontal scrollbars on Windows

* Fix tray exit animation on Edge

* Prevent scrollbar shifting page when setting overflow: hidden on body

* Add shouldCloseOnBlur prop to Tray

* Fix press state being retained on Picker in Safari when closed with Escape

* Fix tests

--- a/packages/@adobe/spectrum-css-temp/components/menu/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/menu/index.css
@@ -35,16 +35,16 @@ governing permissions and limitations under the License.
 
 .spectrum-Menu {
   text-align: start;
-  display: inline-block;
+  display: block;
 
   box-sizing: border-box;
 
-  margin: var(--spectrum-popover-padding-y) 0;
-  padding: 0;
+  padding: var(--spectrum-popover-padding-y) 0;
+  margin: 0;
 
   list-style-type: none;
 
-  overflow: auto;
+  overflow-y: auto;
   user-select: none;
 
   max-height: inherit; /* inherit from parent popover */
